WebCore: Fix for https://bugs.webkit.org/show_bug.cgi?id=50974 getComputedStyle() returns wrong values for zoomed elements when display is none -and corresponding- <rdar://problem/8522731>

Reviewed by Darin Adler.

If there is no renderer but the RenderStyle's value is a fixed
length, send it through zoomAdjustedPixelValue(). There's not much
we can do for other length types without a renderer.
* css/CSSComputedStyleDeclaration.cpp:
(WebCore::zoomAdjustedPixelValueForLength):
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests: New test for https://bugs.webkit.org/show_bug.cgi?id=50974
getComputedStyle() returns wrong values for zoomed elements when
display is none
-and corresponding-
<rdar://problem/8522731>

Reviewed by Darin Adler.

* fast/css/getComputedStyle/zoom-on-display-none-expected.txt: Added.
* fast/css/getComputedStyle/zoom-on-display-none.html: Added.



Canonical link: https://commits.webkit.org/64392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74045 268f45cc-cd09-0410-ab3c-d52691b4dbfc