WebCore/css/CSSComputedStyleDeclaration.cpp
@@ -340,6 +340,13 @@ inline static PassRefPtr<CSSPrimitiveValue> zoomAdjustedNumberValue(double value
     return CSSPrimitiveValue::create(value / style->effectiveZoom(), CSSPrimitiveValue::CSS_NUMBER);
 }
 
+static PassRefPtr<CSSValue> zoomAdjustedPixelValueForLength(const Length& length, const RenderStyle* style)
+{
+    if (length.isFixed())
+        return zoomAdjustedPixelValue(length.value(), style);
+    return CSSPrimitiveValue::create(length);
+}
+
 static PassRefPtr<CSSValue> valueForReflection(const StyleReflection* reflection, const RenderStyle* style)
 {
     if (!reflection)
@@ -1062,7 +1069,7 @@ PassRefPtr<CSSValue> CSSComputedStyleDeclaration::getPropertyCSSValue(int proper
         case CSSPropertyHeight:
             if (renderer)
                 return zoomAdjustedPixelValue(sizingBox(renderer).height(), style.get());
-            return CSSPrimitiveValue::create(style->height());
+            return zoomAdjustedPixelValueForLength(style->height(), style.get());
         case CSSPropertyWebkitHighlight:
             if (style->highlight() == nullAtom)
                 return CSSPrimitiveValue::createIdentifier(CSSValueNone);
@@ -1302,7 +1309,7 @@ PassRefPtr<CSSValue> CSSComputedStyleDeclaration::getPropertyCSSValue(int proper
         case CSSPropertyWidth:
             if (renderer)
                 return zoomAdjustedPixelValue(sizingBox(renderer).width(), style.get());
-            return CSSPrimitiveValue::create(style->width());
+            return zoomAdjustedPixelValueForLength(style->width(), style.get());
         case CSSPropertyWordBreak:
             return CSSPrimitiveValue::create(style->wordBreak());
         case CSSPropertyWordSpacing:
@@ -1474,8 +1481,9 @@ PassRefPtr<CSSValue> CSSComputedStyleDeclaration::getPropertyCSSValue(int proper
                 list->append(zoomAdjustedPixelValue(style->perspectiveOriginY().calcMinValue(box.height()), style.get()));
             }
             else {
-                list->append(CSSPrimitiveValue::create(style->perspectiveOriginX()));
-                list->append(CSSPrimitiveValue::create(style->perspectiveOriginY()));
+                list->append(zoomAdjustedPixelValueForLength(style->perspectiveOriginX(), style.get()));
+                list->append(zoomAdjustedPixelValueForLength(style->perspectiveOriginY(), style.get()));
+                
             }
             return list.release();
         }
@@ -1518,8 +1526,8 @@ PassRefPtr<CSSValue> CSSComputedStyleDeclaration::getPropertyCSSValue(int proper
                 if (style->transformOriginZ() != 0)
                     list->append(zoomAdjustedPixelValue(style->transformOriginZ(), style.get()));
             } else {
-                list->append(CSSPrimitiveValue::create(style->transformOriginX()));
-                list->append(CSSPrimitiveValue::create(style->transformOriginY()));
+                list->append(zoomAdjustedPixelValueForLength(style->transformOriginX(), style.get()));
+                list->append(zoomAdjustedPixelValueForLength(style->transformOriginY(), style.get()));
                 if (style->transformOriginZ() != 0)
                     list->append(zoomAdjustedPixelValue(style->transformOriginZ(), style.get()));
             }
